--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="container">
             <div class="ms-auto col-12 col-md-7 ">
                 <h1 class="display-1 fw-bold my-5">
-                    Viajando y comiendo por el mundo
+                    Comidas del fin <br> del mundo
                 </h1>
                 <p class="my-5">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis, accusamus iusto quibusdam
@@ -127,7 +127,7 @@
                             repudiandae neque rem adipisci repellendus libero illo quo
                             blanditiis, velit quasi ad, recusandae voluptates officia.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-info btn-sm">
                             Ver más
                         </button>
                     </div>
@@ -144,7 +144,7 @@
                             consequatur quos error fuga excepturi quo. Laudantium optio
                             pariatur laboriosam modi, ea molestias?
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-info btn-sm">
                             Ver más
                         </button>
                     </div>
@@ -161,7 +161,7 @@
                             corporis facilis qui architecto dolor, accusamus eveniet
                             exercitationem fugit. Quod autem neque ducimus.
                         </p>
-                        <button type="button" class="btn btn-outline-info">
+                        <button type="button" class="btn btn-outline-info btn-sm">
                             Ver más
                         </button>
                     </div>
@@ -184,10 +184,10 @@
             tempora quaerat?</p>
 
         <form>
-
+            <h1>Envíame tu mensaje preguntando lo que desees sobre los viajes o comida.</h1>
 
             <div class="form-group mb-4">
-                <label class="mb-2">Mónica</label>
+                <label class="mb-2">Nombre</label>
                 <input class="form-control" placeholder="Nombre">
             </div>
 
@@ -215,7 +215,7 @@
 
 
     <footer class="bg-dark text-center text-light p-4">
-        <p class="mb-0">Olivia Ros 2019. Todos los derechos reservados.</p>
+        <p class="mb-0">Mónica González 2025. Todos los derechos reservados.</p>
     </footer>
 
 
