Ampliación del párrafo 'Acerca de mi'

--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@
 
         <p class="my-4">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam distinctio, odit laborum aliquam
-            earum itaque cum sequi, dolorem optio vol
+            earum itaque cum sequi, dolorem optio vol.
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris 
+            nisi ut aliquip ex ea commodo consequat.
         </p>
 
 
